; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_gtaskqueue.c_gtaskqueue_unblock.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_gtaskqueue.c_gtaskqueue_unblock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gtaskqueue = type { i32, i32 (i32)*, i32, i32 }

@TQ_FLAGS_BLOCKED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gtaskqueue_unblock(%struct.gtaskqueue* %0) #0 {
  %2 = alloca %struct.gtaskqueue*, align 8
  store %struct.gtaskqueue* %0, %struct.gtaskqueue** %2, align 8
  %3 = load %struct.gtaskqueue*, %struct.gtaskqueue** %2, align 8
  %4 = call i32 @TQ_LOCK(%struct.gtaskqueue* %3)
  %5 = load i32, i32* @TQ_FLAGS_BLOCKED, align 4
  %6 = xor i32 %5, -1
  %7 = load %struct.gtaskqueue*, %struct.gtaskqueue** %2, align 8
  %8 = getelementptr inbounds %struct.gtaskqueue, %struct.gtaskqueue* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = and i32 %9, %6
  store i32 %10, i32* %8, align 4
  %11 = load %struct.gtaskqueue*, %struct.gtaskqueue** %2, align 8
  %12 = getelementptr inbounds %struct.gtaskqueue, %struct.gtaskqueue* %11, i32 0, i32 2
  %13 = call i32 @STAILQ_EMPTY(i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %23, label %15

15:                                               ; preds = %1
  %16 = load %struct.gtaskqueue*, %struct.gtaskqueue** %2, align 8
  %17 = getelementptr inbounds %struct.gtaskqueue, %struct.gtaskqueue* %16, i32 0, i32 1
  %18 = load i32 (i32)*, i32 (i32)** %17, align 8
  %19 = load %struct.gtaskqueue*, %struct.gtaskqueue** %2, align 8
  %20 = getelementptr inbounds %struct.gtaskqueue, %struct.gtaskqueue* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 %18(i32 %21)
  br label %23

23:                                               ; preds = %15, %1
  %24 = load %struct.gtaskqueue*, %struct.gtaskqueue** %2, align 8
  %25 = call i32 @TQ_UNLOCK(%struct.gtaskqueue* %24)
  ret void
}

declare dso_local i32 @TQ_LOCK(%struct.gtaskqueue*) #1

declare dso_local i32 @STAILQ_EMPTY(i32*) #1

declare dso_local i32 @TQ_UNLOCK(%struct.gtaskqueue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
